--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-            <title></title>
+            <title>Agricultural Practices in New York Counties</title>
 
         <!--put your external stylesheet links here-->
         <link rel="stylesheet" href="css/style.css">
@@ -15,7 +15,7 @@
              place these within <style> tags-->
         
     </head>
-
+    <h1> Agricultural Practices in New York State</h1>
     <body>
         <!--put your initial page content here-->
 
